Bug 287203 - htmlreplies forwarding formatting missing newlines
Summary: htmlreplies forwarding formatting missing newlines
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-21 22:31 UTC by Allen Winter
Modified: 2011-11-30 17:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2011-11-21 22:31:22 UTC
Version:           Git (master) (using Devel) 
OS:                Linux

When I Forward->Inline an HTML message, the first line of the composer looks like (all 1 line):

---------- Forwarded Message ---------- Subject: <SUBJECT> Date: Monday 21 November 2011, 11:14:37 PM From: someone@somewhere.com To: allen.winter@kdab.com 

note how there should be newlines between all those items because my standard forward template looks like this:

%REM="Default forward template"%-

----------  Forwarded Message  ----------

Subject: %OFULLSUBJECT
Date: %ODATE, %OTIMELONG
From: %OFROMADDR
%OADDRESSEESADDR

%TEXT
-----------------------------------------

Reproducible: Always

Steps to Reproduce:
Forward->Inline an HTML message

Actual Results:  
the forwarding info is missing newlines between each item

Expected Results:  
newlines should be respected, per my template
Comment 1 Torgny Nyblom 2011-11-30 17:50:56 UTC
Git commit ab785b6ef6add7b582d398e492770fd083c4f40b by Torgny Nyblom.
Committed on 30/11/2011 at 13:47.
Pushed by tnyblom into branch 'master'.

Respect line breaks from templates also for html mails

BUG: 287203

M  +11   -1    templateparser/templateparser.cpp

http://commits.kde.org/kdepim/ab785b6ef6add7b582d398e492770fd083c4f40b