Respect line breaks from templates also for html mails

BUG: 287203